src/objects/Theme__c.object
<CustomObject>
    <fields>
        <fullName>Questions_Number__c</fullName>
        <label>Questions Number</label>
        <summaryForeignKey>Question__c.Theme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <referenceTo>Subject__c</referenceTo>
        <relationshipName>Themes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tests_Number__c</fullName>
        <label>Tests Number</label>
        <summaryForeignKey>TestTheme__c.Theme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>